--- a/modules/module-1.1.qmd
+++ b/modules/module-1.1.qmd
@@ -1,5 +1,11 @@
 ---
 title: "Module 1.1"
-subtitle: ""
-editor: visual
+subtitle: "Working With Data"
+format: html
+execute: 
+  echo: true
+  message: false
+  warning: false
+  link-external-newwindow: true
 ---
+
