--- a/modules/module-1.1.qmd
+++ b/modules/module-1.1.qmd
@@ -1,45 +1,159 @@
 ---
 title: "Module 1.1"
-subtitle: "Working With Data"
+subtitle: "Working With Flat Files"
 format: html
+highlight-style: atom-one
 execute: 
   echo: true
   message: false
   warning: false
 ---
 
-## Pre-work
+::: {.callout-tip}
+## Prework
 
-At this point you should already have installed R, R Studio the Tidyverse collection of packages (see [getting started](/modules/getting-started.html)). In this module, we will be using the `readr`, `readxl` and `dplyr` from the Tidyverse.
+- Install R, R Studio and the Tidyverse collection of packages if you have not done so already (see [getting started](/modules/getting-started.html))
 
-You will also need to install the `vdemdta` package which we will use to interface with the V-Dem Institute's API. Because this package is not on the CRAN Network, you will have to do a couple of extra steps. First, install the devtools package by typing `install.packages("devtools")` in your console. Next, use devtools to install the `vdemdata` package directly from GitHub. Type `devtools::install_github("vdeminstitute/vdemdata")` in your console. 
+- Install the `janitor` package (`install.packages("janitor")`)
 
-Now clone [the repo]() for this module. Then open the **module-1.1.qmd** file and load the packages: 
+- Start a new quarto project called "module-1.1" and generate a quarto document by the same name so that you can use to follow along with this exercise
+
+- Create a new directory/folder in your project folder called "data" where you can store .csv files
+:::
+
+
+::: {.callout-note collapse="true"} 
+
+In this module, we will be using the `readr`, `tidyr` and `dplyr` from the Tidyverse. While we could just load the entire Tidyverse collection of packages (e.g. `library(tidyverse)`), it is generally better from a [performance standpoint](https://stackoverflow.com/questions/50257990/what-is-the-advantage-of-using-librarytidyverse-instead-of-sub-packages) to load the packages individually. 
+
+Also, we will load the packages as we go along in various code chunks. But it is also possible to load all of the packages you will be using in a Quarto doc or R script in a single "setup" code chunk at the beginning of the file. You will see both workflows represented in this course.
+:::
+
+
+## Overview
+
+In this module, we are going to work with a "flat file" (.csv) that we will download from the World Bank's [Data Bank](https://databank.worldbank.org/). We are going to encounter many problems with these data that we will rectify using various R packages that I will introduce along the way. The idea is to take this file in its current state and transform it into a [tidy](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html) dataset where each column represents a variable, each row represents an observation, and each cell represents a single value.
+
+## Step 1: Download data from the World Bank
+
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Downloading Data from the World Bank' >}}
+
+Go to the World Development Indicators [portal](https://databank.worldbank.org/source/world-development-indicators) at the World Bank's Data Bank.
+
+Under Countries, select the Countries tab and then select the little check mark ☑️ to select all of the countries. Be sure to select the Countries tab first, though, or you will also be downloading aggregate data for regions and groups of countries.
+
+Next, under Series, search for "labor force participation" and find labor force participation rates for women ages 15-64 (ILO modeled estimates). Check that series. 
+
+Now go to Time and select the years from the last 50 years. Click Apply Changes, go to Download Options and download as a .csv file. Place the .csv file in the data directory that you created for this module. Save it as "messy_wb_data.csv" or something like that. 
+
+## Step 2: Read the .csv file
+
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Reading Data From a .csv File' >}}
+
+Now we are going to read this messy World Bank data into R using the `read_csv()` function from the `readr` package. [readr](https://readr.tidyverse.org/) is a collection of functions that parses data from a flat file into a *tibble*, the modern Tidyverse version of a data frame. Afater we have read the data  into R, we are going to have a look at it with the [glimpse()](https://dplyr.tidyverse.org/reference/glimpse.html) function from the [dplyr](https://dplyr.tidyverse.org/index.html) package.
+
+
+::: {.callout-note collapse="true"}
+While comma delimited files are the most common kind of flat file, `readr` includes functions for parsing files with a wide range of delimiters including tabs (`read_tsv()`), semicolons (`read_csv2()`) and white spaces (`read_table()`). There is also a Tidyverse package for reading in Excel files called [readxl](https://readxl.tidyverse.org/).
+:::
+
 
 ```{r}
-#| eval: false
-library(tidyverse)
-library(vdemdata)
+#| label: step2
+
+library(readr)
+library(dplyr)
+
+wb_data_messy <- read_csv("data/messy_wb_data.csv")
+
+glimpse(wb_data_messy)
 ```
+`glimpse()` shows us a list of the columns in the along with their type (e.g. character, double, etc.) and a few rows' worth of data. 
 
-## Reading data from a .csv file
+## Step 3: Reshape the data
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Reading Data from a .csv File' >}}
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Reshaping Data With `pivot_longer()`' >}}
+
+There are a few things about the data here that make it messy. First, in order for the data to be tidy, we want each column to represent a variable and each row to represent an observation. 
+
+But here we see the reverse: the data are in *wide form*, meaning that each column represents a year and each row represents a country. This entails that each row represents *multiple* observations in that we have data for multiple years for each row. 
+
+To rectify this, we need to *reshape* the data from wide form to *long form*. For this, we need the [pivot_longer()](https://tidyr.tidyverse.org/reference/pivot_longer.html) function from the [tidyr](https://tidyr.tidyverse.org/index.html) package. 
+
+The `pivot_longer()` function takes three basic arguments: 
+
+- **cols** - which columns you want to pivot
+- **names_to** - what you want the column with the transposed data to be called
+- **values_to** - what you want the column with the values from the transposed data to be called 
+
+In our case, we want to reshape all of the year columns and have the years represented in the rows. We want the newly created column to be called "year" and the values are going to represent the data on female labor force participation we downloaded (flfp).
+
+::: {.callout-important}
+## The Pipe Operator
+
+For our `pivot-longer()` call we are going to use R's native [pipe operator](https://r4ds.hadley.nz/workflow-style.html#sec-pipes). Pipes tell R to do something to the object that they are attached to. In this case, we are telling R to apply `pivot_longer()` to `wb_data`. The alternative way of writing this code would be to include the data as the first argument in the function, e.g. `pivot_longer(wb_data, cols = ..., names_to = ... , values_to = ...)`. As you will see, pipe operators enable us to string together multiple functions in a convenient way to transform our data. 
+:::
+
+::: {.callout-caution}
+## Spaces in Variable Names
+Notice that when we specify the years in our `pivot_longer()` call we encapsulate them in backticks (``). This is because the years, as they were imported from the WDI dataset, have spaces in them. Typically we want to avoid this scenario by writing our variable names in [*snake_case*](https://en.wikipedia.org/wiki/Snake_case). 
+:::
 
 ```{r}
-#| label: read_csv
-#| eval: false
+#| label: step3
 
-demdata <- read_csv(data/"demdata.csv")
+library(tidyr)
+
+wb_data <- wb_data_messy |> 
+  pivot_longer(
+    cols = `1972 [YR1972]`: `2021 [YR2021]`, 
+    names_to = "year", 
+    values_to = "flfp"
+  ) 
+
+glimpse(wb_data)
 ```
 
-## Reading data from an excel file
+## Step 4: Fix year and change variables to numeric
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Reading Data from an Excel File' >}}
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Truncating Variable Names and Changing to Numeric' >}}
+
+Now that our data are transposed, we can start to work on some other key issues. Notice that the year is stored in the weird way in which it was imported--as a character (or string) with both the year and the year in brackets, e.g. 1972 [YR1972]. Notice that `flfp` is also stored as a character whereas it should be numeric. 
+
+To fix this, we will use the [mutate()](https://dplyr.tidyverse.org/reference/mutate.html) and `mutate_at()` functions from `dplyr`. `mutate()` is used to transform variables and to create new ones while `mutate_at()` allow us to transform multiple columns at once. 
+
+First we call `mutate()` along with [substring()](https://www.statology.org/substring-function-in-r/) to truncate the year variable to only include the first four characters of the string. Then we call `mutate_all()` along with `as.numeric` to transform `year` and `flfp` to numeric variables.
+
+```{r}
+#| label: step4
+
+wb_data <- wb_data |> 
+  mutate(year = substring(year, 1, 4)) |> 
+  mutate_at(c("year", "flfp"), as.numeric)
+
+glimpse(wb_data)
+```
+
+## Step 5: Clean the variable names
+
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Clean Variable Names With `janitor`' >}}
+
+The last thing we are going to do is to fix the variable names. Specifically, we want to remove the spaces from the remaining variables and conver them from title case to snake case. To do this, we will use the `clean_names()` function from the `janitor` package. 
+
+As a final step, we can export our clean data to a new .csv file with the `write.csv()` function from `readr`. 
+
+```{r}
+#| label: step5
+
+library(janitor)
+
+wb_data_clean <- wb_data |>  
+  clean_names() 
+
+write_csv(wb_data_clean, "data/wb_data_clean.csv")
+
+glimpse(wb_data_clean)
+```
 
 
-## Reading data from an API
 
-
-
-## Assignment 
